secure-web-app/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-portal
  labels:
    run: hr-portal
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: hr-portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-portal
spec:
  selector:
    matchLabels:
      run: hr-portal
  replicas: 2
  template:
    metadata:
      labels:
        run: hr-portal
    spec:
      containers:
      - name: hr-portal
        image: nginx
        command: ["/bin/sh"]
        args: ["-c", "echo '<!doctype html><html><body><h1>Interal HR Portal</h1></body></html>' | sudo tee /var/www/html/index.html"]
        ports:
        - containerPort: 80
